--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,10 @@
   ],
   "dependencies": {
     "purescript-console": "^3.0.0",
-    "purescript-halogen": "^2.0.0"
+    "purescript-halogen": "^2.0.0",
+    "purescript-webaudio": "adkelley/purescript-webaudio"
+  },
+  "devDependencies": {
+    "purescript-psci-support": "^3.0.0"
   }
 }
