--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "purescript-console": "^3.0.0",
     "purescript-halogen": "^2.0.0",
-    "purescript-webaudio": "adkelley/purescript-webaudio"
+    "purescript-webaudio": "adkelley/purescript-webaudio",
+    "purescript-sets": "^3.0.0",
+    "purescript-typelevel": "^3.0.0",
+    "purescript-newtype": "^2.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0"
+    "purescript-psci-support": "^3.0.0",
+    "purescript-test-unit": "^12.0.0"
   }
 }
